fix(recur-dialog): use dark mode colors (#238)

--- a/components/calendar/recur-dialog.module.scss
+++ b/components/calendar/recur-dialog.module.scss
@@ -17,7 +17,6 @@
 
     .radio {
       margin-left: -10px;
-      margin-bottom: -8px;
 
       label {
         width: 100%;
